--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 	<section id="projects">
 		<div class="text-center">
 			<h1>My Projects</h1>
-			<div class="container-fluid">
-				<div id="projectItems" class="d-flex flex-column justify-content-center flex-md-column flex-lg-row gap-3">
+			<div class="container-fluid d-flex justify-content-center">
+				<div id="projectItems" class="d-flex flex-column flex-md-row justify-content-center col-md-4 col-lg-12 flex-lg-row gap-3">
 					<div class="border d-flex flex-column">
 						<img src="./images/web.png" id="webp">
 						Web Development (E-commerce Website)
