--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
 
 </head>
 <body>
-	<nav id="navbar" class="container-fluid d-flex flex-row justify-content-center">
-		<ul class="d-flex flex-row justify-content-center p-3 d-grid gap-4 gap-md-6 col-12">
+	<nav id="navbar" class="border container-fluid d-flex flex-row justify-content-center">
+		<ul class="d-flex flex-row justify-content-center p-2 d-grid gap-4 gap-md-6 col-12">
 			<li><a class="link" href="#landing">Home</a></li>
 			<li><a class="link" href="#projects">Project</a></li>
-			<li><a class="link" href="#landing">Edge</a></li>
+			<li><a class="link" href="#me">Edge</a></li>
 			<li><a class="link" href="#tools">Tools</a></li>
 			<li><a class="link" href="#contact">Contact</a></li>
 		</ul>
 	</nav>
 
-	<section id="landing" class="bg-secondary d-flex flex-row justify-content-around align-items-center p-5">
+	<section id="landing" class="bg-secondary d-flex flex-row justify-content-around align-items-center ">
 		<div id="navitems" class="d-flex flex-column flex-md-row justify-content-around">
 			<div id="profilePicture" class="container-fluid col-12 col-md-6 overflow-hidden order-1">
 				<img src="./images/main2.jpg" class="img-fluid rounded-circle">
@@ -37,7 +37,7 @@
 				<h2>HELLO! I AM</h2>
 				<h1>EJ NICODEMUS</h1>
 				<div id="details" class="m-5 d-flex flex-row d-grid gap-3 align-items-center justify-content-center">
-					<div>Software Engineer</div>
+					<div>Full-stack Web Developer</div>
 					<div><h1>|</h1></div>
 					<div>Digital Artist</div>
 					<div><h1>|</h1></div>
@@ -48,7 +48,14 @@
 		
 	</section>
 
-	<section id="projects">
+	<section id="me" class="bg-secondary text-light	text-center mb-5">
+		<div class="p-3">
+			<h1>A little bit about myself</h1>
+			<p>My name is EJ Casbadillo Nicodemus. A Full-stack web developer, digital artist, video editor, and a programming enthusiast who is currently living in Cavite City. A college graduate with a bachelor's degree in Information Technology. </p>
+		</div>
+	</section>	
+
+	<section id="projects" class="mb-5">
 		<div class="text-center">
 			<h1>My Projects</h1>
 			<div class="container-fluid d-flex justify-content-center">
@@ -68,7 +75,7 @@
 		</div>
 	</section>
 
-	<section id="tools" class="m-3">
+	<section id="tools" class="m-3 mb-5">
 		<div class="text-center m-3">
 			<h1>Gizmos that I use:</h1>
 			<div id="toolsItem" class="d-flex flex-column justify-content-center flex-md-row gap-5">
@@ -123,7 +130,7 @@
 		</div>
 	</section>
 
-	<section id="contact" class="m-3">
+	<section id="contact" class="m-3 mb-5">
 		<div class="text-center m-3">
 			<h1>Let's get in touch!</h1>
 			<div id="contactItems"></div>
